2008-09-14 Fred Kiefer <FredKiefer@gmx.de>

        * Source/art/ARTContext.m (-setupDrawInfo): Moved code from here
	to...
	* Source/x11/XGServer.m (-getForScreen:pixelFormat:masks:::):
	... here, including helper functions. Commented out this code and
	replaced it by a different approach.
	* Headers/x11/XGServer.h: Declare this new method.

2008-09-14 13:17-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* install.sh: Adding install script for use by compile-all.

2008-08-19 Fred Kiefer <FredKiefer@gmx.de>

        * Source/art/ARTContext.m (-GSSetDevice:::): Only call
	setupDrawInfo once.
        * Source/art/ARTContext.m (-setupDrawInfo): Try to handle
	endianess differance better.
        * Source/art/ARTContext.m (-initializeBackend): Call
	artcontext_setup_gamma(). 
	* Source/art/blit.h,
	* Source/art/blit-main.m:  New function artcontext_setup_gamma()
	split off from artcontext_setup_draw_info().
	
2008-08-14 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-_ewmh_isMinimized:): Correct
	indentation. 
	* Source/x11/XGServerEvent.m (-receivedEvent:type:extra:forMode:):
	For PropertyNotify cache the window first.

2008-07-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-window::::): For EWMH window
	enable property change notifications.
	* Source/x11/XGServerWindow.m (-_ewmh_isMinimized:): Check whether
	the window is minimized.
	* Headers/x11/XGServerWindow.h (-_ewmh_isMinimized:): Declare new
	method. 
	* Source/x11/XGServerEvent.m: Handle case when window gets minimized.
	* Headers/x11/XGGeneric.h: Add atom for hidden state.
	Patch by Hubert Chathi <hubert@uhoreg.ca>.

2008-07-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/GSXftFontInfo.m (-setupAttributes:),
	* Source/xlib/XGFontSetFontInfo.m (-setupAttributes:),
	* Source/xlib/XGFont.m (-setupAttributes:),
	* Source/art/ftfont.m (-setupAttributes:),
	* Source/art/ftfont-old.m (-setupAttributes): Correct the sign of
	the descender in the bounding box.
